git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@329 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -71,7 +71,7 @@ something I'd like to add.
  
 
 -----------------------------------------------------------------------
-Version 3.1.7   05/03/2009   (svn revision XXX)
+Version 3.1.7   05/03/2009   (svn revision 329)
 -----------------------------------------------------------------------
 
 * Run this sql to upgrade to this release:
