--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -63,13 +63,73 @@ us_id not in (select bg_last_updated_user from bugs) and
 us_id not in (select bp_user from bug_posts)
 
 
+
+
+
+
+
+
+
+
 -----------------------------------------------------------------------
-Version 3.2.1   07/xx/2009   (svn revision xxx)
+
+
+
+In POP3Main.cs:
+
+            for (int k = 0; k < FromCannotContainStrings.Length; k++)
+            {
+                if (FromCannotContainStrings[k] != "")
+                {
+                    if (subject.IndexOf(FromCannotContainStrings[k]) >= 0)
+                    {
+                        write_line("skipping because from cannot contain: " + FromCannotContainStrings[k]);
+                        bSkip = true;
+                        break; // done checking, skip this message
+                    }
+                }
+            }
+
+should be:
+
+            for (int k = 0; k < FromCannotContainStrings.Length; k++)
+            {
+                if (FromCannotContainStrings[k] != "")
+                {
+                    if (from.IndexOf(FromCannotContainStrings[k]) >= 0)
+                    {
+                        write_line("skipping because from cannot contain: " + FromCannotContainStrings[k]);
+                        bSkip = true;
+                        break; // done checking, skip this message
+                    }
+                }
+            }
+
+
+
+
+
+
+
+
+
 -----------------------------------------------------------------------
+Version 3.2.1   07/07/2009   (svn revision xxx)
+-----------------------------------------------------------------------
+
+* send_email.aspx was broken in version 3.2.0 because it still 
+referenced FCKEditor 2.6.   Fixed.
+
+* The list of email addresses you see when you hit the "To" button was
+lost if you had a validation error, like forgetting to enter a "To"
+address.
 
 * The page for editing your SQL queries now has syntax highlighting, 
 using "EditArea", from http://www.cdolivet.com/index.php?page=editArea.
 Thanks to "Gettinlucky" for the suggestion.
+
+* "FromCannotContain" setting in btnet_service.exe.config wasn't 
+working. 
 
 -----------------------------------------------------------------------
 Version 3.2.0   07/03/2009   (svn revision 343)
