git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@352 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -80,7 +80,7 @@ us_id not in (select bp_user from bug_posts)
 
 
 -----------------------------------------------------------------------
-Version 3.2.2   07/25/2009   (svn revision xxx)
+Version 3.2.2   07/31/2009   (svn revision 352)
 -----------------------------------------------------------------------
 
 * Fixed javascript error in search.aspx that was preventing SQL from
