git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@359 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -83,6 +83,8 @@ validations.
 when text was changing.
 
 
+test with some fields view only
+
 -----------------------------------------------------------------------
 Version 3.2.2   07/31/2009   (svn revision 352)
 -----------------------------------------------------------------------
