--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -66,22 +66,20 @@ pop3 = new POP3Main("c:\\btnet_service.exe.config", verbose);
 
 
 -----------------------------------------------------------------------
-Version 3.2.4   08/xx/2009   (svn revision 361)
+Version 3.2.4   08/xx/2009   (svn revision 361++++)
 -----------------------------------------------------------------------
 
 * If you want to maybe improve the performance of you BugTracker.NET
 database a little bit, and I mean just a little bit, take a look in the
 SQL for this release.  The SQL mostly deals with changing which indexes
-are clustered.   
+are the clustered indexes.  If you don't understand what that means, 
+don't worry about it.
 
-Don't know if this is truly an issue, but after upgrading to 2.9.7 I wanted
-to add the Flag and Seen fields to all of the queries. When I tried to add
-them to a private query I got an error saying that I had to select an
-organization (that radiobox was highlighted by default). Since I didn't
-have the option of selecting the existing user again I set it to myself
-then updated it back via SQL. I guess to resolve this, Admin users would
-need to be able to select from a list of users in the edit query screen
-(with the existing user already highlighted).
+* Performance tweak of viewing images, giving the browser a better
+chance of caching them.
+
+* Fix of bug in edit_query.aspx, so that admins can now edit the queries
+belonging to individual users.
 
 -----------------------------------------------------------------------
 Version 3.2.3   08/08/2009   (svn revision 361)
