git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@368 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -95,6 +95,16 @@ By adding two simple replaces to your server-side code, you avoid those issues, 
 
 Response.Write("{\"Name\": \"" + MyDBStringField.Replace("\", "\\").Replace("\"", "\\"") + "\", \"City\": \"Davis\"}")
 
+
+-----------------------------------------------------------------------
+Version 3.2.5   08/xx/2009   (svn revision xxx)
+-----------------------------------------------------------------------
+
+new imlementation of whatsnew.
+
+Setting User Password to value > 20 characters breaks login
+
+
 -----------------------------------------------------------------------
 Version 3.2.4   08/16/2009   (svn revision 367)
 -----------------------------------------------------------------------
