git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@372 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -90,6 +90,14 @@ I do have a "copy bug" function, but it doesn't copy all the posts.   I guess it
 
 
 -----------------------------------------------------------------------
+Version 3.2.6   09/xx/2009   (svn revision xxx)
+-----------------------------------------------------------------------
+
+* Fixed bug where task's times were switched from PM to AM.  Thanks to
+Philip Parmenter for the fix.
+
+alter table bug_subscriptions drop column bs_id
+-----------------------------------------------------------------------
 Version 3.2.5   08/29/2009   (svn revision 370)
 -----------------------------------------------------------------------
 
