git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@374 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -99,6 +99,9 @@ text search was disabled.
 * Fixed bug where task's times were switched from PM to AM.  Thanks to
 Philip Parmenter for the fix.
 
+* Fixed bug 2864901 - Duplicate file error when trying to forward MS 
+Outlook with multiple embedded images.
+
 alter table bug_subscriptions drop column bs_id
 -----------------------------------------------------------------------
 Version 3.2.5   08/29/2009   (svn revision 370)
